[project]
name = "qbew"
version = "0.0.0"
description = "A Python wrapper for QBE"
authors = [{name = "dosisod"}]
license = {text = "GPL-3.0-only"}
readme = "README.md"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Typing :: Typed"
]

[project.urls]
Repository = "https://github.com/dosisod/qbew"

[tool.setuptools]
packages = ["qbew"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
color_output = true
known_first_party = ["test"]

[tool.mypy]
namespace_packages = true
strict = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_unimported = true
warn_unreachable = true
allow_redefinition = true
python_version = "3.10"

[tool.coverage.run]

[tool.coverage.report]
exclude_lines = [
  "raise NotImplementedError",
  "pragma: no cover",
  "assert False",
  "if TYPE_CHECKING",
]
skip_covered = true
skip_empty = true

# TODO: add e2e tests for running QBE
omit = ["qbew/run.py"]

[tool.black]
line-length = 79
color = true

[tool.pytest.ini_options]
addopts = "--cov=qbew --cov-report=html --cov-report=term-missing --cov-fail-under=100"
testpaths = ["test"]

[tool.ruff]
line-length = 79
preview = true
target-version = "py310"

select = ["ALL"]

extend-ignore = [
  "A003",
  "ANN101",
  "B011",
  "CPY001",
  "D100", "D101", "D102", "D103", "D104", "D105", "D107",
  "D203", "D211", "D212", "D213",
  "FIX002",
  "S101",
  "S603", "S607",
  "TD002", "TD003",
]

[tool.ruff.per-file-ignores]
"qbew/*" = ["PT015"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
